// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateMarkdownReport > snapshot: empty scan 1`] = `
"# PromptCI Health Report

**Generated:** 2026-05-31T00:00:00.000Z
**Repo:** \`/repo\`
**Project type:** typescript
**Files scanned:** 0

## Health Score

\`\`\`
██████████  100/100  Healthy
\`\`\`

## Trend

First scan — no trend data available yet.

## Issues

No issues found. Instruction files look good!

---
> Findings are heuristic. Review each item before acting. This report identifies patterns — it does not auto-fix.

*Generated by [PromptCI](https://github.com/SeriousGeese/PromptCI)*"
`;

exports[`generateMarkdownReport > snapshot: full report with one issue and one fix 1`] = `
"# PromptCI Health Report

**Generated:** 2026-05-31T00:00:00.000Z
**Repo:** \`/repo\`
**Project type:** typescript
**Files scanned:** 1

## Health Score

\`\`\`
███████░░░  72/100  Fair
\`\`\`

🟠 1 high

## Trend

First scan — no trend data available yet.

## Top Fixes

**1. Duplicate Instructions**

These sections appear highly similar.

*Action:* Merge or remove one copy.

## Issues

### 1. 🟠 [HIGH] Duplicate Instructions

These sections appear highly similar.

**File:** \`CLAUDE.md\`

**Location:** \`CLAUDE.md\` L1–L10

**Evidence:**
- Evidence line 1

> **Recommendation:** Merge or remove one copy.

---

## Files Scanned

- \`CLAUDE.md\` (claude, 3 lines, ~6 tokens)

---
> Findings are heuristic. Review each item before acting. This report identifies patterns — it does not auto-fix.

*Generated by [PromptCI](https://github.com/SeriousGeese/PromptCI)*"
`;
